Add toggleable limits and Relic UUID tracking first, the trading prevention and holding limit can be disabled in the config.yml (both on by default). second, added a command to edit the trading prevention and holding limit. third, made it so relic items are NBT tagged with the relic UUID they were claimed from, and check this at redemption.
Signed-off-by: aelithron <aelithron@gmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,3 +21,13 @@ RedeemBlockLocation:
 # The URL for the Discord webhook.
 # To disable this feature, leave this as "CHANGEME".
 DiscordWebhook: "CHANGEME"
+
+# Relic item trade prevention
+# If enabled, players cannot redeem relic items from relics they didn't find.
+# This prevents players from giving each other relics.
+EnforceNoTrade: true
+
+# Relic holding limits
+# If enabled, players cannot pick up two relics at the same time.
+# This means that they must redeem the first before collecting the second.
+EnforceHoldingLimit: true
